# BIRDPJ

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
scripts/: 01_download_data.py  02_prepare_dataset.py  03_train_model.py  04_evaluate_model.py
